--- a/album.html
+++ b/album.html
@@ -23,9 +23,19 @@
 
     <!-- custom styles -->
     <link rel="stylesheet" href="styles/main.css" />
+    <link rel="stylesheet" href="styles/loader.css" />
     <link rel="stylesheet" href="styles/album.css" />
   </head>
   <body>
+    <section id="loadAnimation" class="load-animation hide-animation">
+      <div class="lds-ellipsis">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </section>
+
     <section class="py-5 track-header">
       <div class="container px-3 px-md-4 text-white">
         <div class="row gap-3 align-items-end justify-content-center">
