--- a/index.html
+++ b/index.html
@@ -22,9 +22,18 @@
 
     <!-- custom styles -->
     <link rel="stylesheet" href="styles/main.css" />
+    <link rel="stylesheet" href="styles/loader.css" />
     <link rel="stylesheet" href="styles/search.css" />
   </head>
   <body>
+    <section id="loadAnimation" class="load-animation hide-animation">
+      <div class="lds-ellipsis">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </section>
     <section class="py-5">
       <div class="container px-3 px-md-4">
         <form id="searchInpt" class="searchForm" action="">
