fixed and updated

--- a/album.html
+++ b/album.html
@@ -51,7 +51,7 @@
             class="col-sm px-3 px-sm-0 text-center text-sm-start d-flex flex-column gap-3"
           >
             <h5 id="albumType" class="fw-bolder">Album</h5>
-            <h1 id="albumName" class="fw-bold">All Too Well</h1>
+            <h1 id="albumName" class="fw-bold display-3">All Too Well</h1>
             <div
               class="mb-1 d-flex align-items-center gap-2 justify-content-center justify-content-sm-start text-start"
             >
@@ -63,7 +63,7 @@
                   alt=""
                 />
               </div>
-              <p id="albumInfo" class="p-0 track-info">
+              <p id="albumInfo" class="p-0 text-ellipsis">
                 <span class="fw-bold">
                   <a class="artist-link" href="">Taylor Swift</a> &#183; 2016
                   &#183; 30 songs
