--- a/index.html
+++ b/index.html
@@ -30,13 +30,9 @@
     <section class="py-5">
       <div class="container px-3 px-md-4">
         <form id="searchInpt" class="searchForm" action="">
-          <input name="searchKey"
-          class="searchInpt"
-          type="text"
-          placeholder="Search" />
-          
+          <input name="searchKey" class="searchInpt" type="text" placeholder="Search" />
           <select class="filter-box" name="filter" id="">
-            <option value="track" selected>Track</option>
+            <option value="" selected>Track</option>
             <option value="artist">Artist</option>
             <option value="album">Album</option>
             <option value="genre">Genre</option>
