--- a/album.html
+++ b/album.html
@@ -4,23 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Track</title>
-
     <link rel="shortcut icon" href="spotify-32.ico" type="image/x-icon" />
-
     <!-- font awesome icons -->
-    <script
-      src="https://kit.fontawesome.com/313b9add13.js"
-      crossorigin="anonymous"
-    ></script>
-
+    <script src="https://kit.fontawesome.com/313b9add13.js"
+            crossorigin="anonymous"></script>
     <!-- Bootstrap styles -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
-      crossorigin="anonymous"
-    />
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+          crossorigin="anonymous" />
     <!-- custom styles -->
     <link rel="stylesheet" href="styles/main.css" />
     <link rel="stylesheet" href="styles/loader.css" />
@@ -35,33 +27,24 @@
         <div></div>
       </div>
     </section>
-
     <section class="py-5 track-header">
       <div class="container px-3 px-md-4 text-white">
         <div class="row gap-3 align-items-end justify-content-center">
           <div class="imgBox col-sm-4 col-10">
-            <img
-              id="albumImg"
-              src="https://i.scdn.co/image/ab67616d0000b273318443aab3531a0558e79a4d"
-              class="img-fluid"
-              alt=""
-            />
+            <img id="albumImg"
+                 src="https://i.scdn.co/image/ab67616d0000b273318443aab3531a0558e79a4d"
+                 class="img-fluid"
+                 alt="" />
           </div>
-          <div
-            class="col-sm px-3 px-sm-0 text-center text-sm-start d-flex flex-column gap-3"
-          >
+          <div class="col-sm-7 px-3 px-sm-0 text-center text-sm-start d-flex flex-column gap-3">
             <h5 id="albumType" class="fw-bolder">Album</h5>
-            <h1 id="albumName" class="fw-bold display-3">All Too Well</h1>
-            <div
-              class="mb-1 d-flex align-items-center gap-2 justify-content-center justify-content-sm-start text-start"
-            >
+            <h1 id="albumName" class="fw-bold display-4">All Too Well</h1>
+            <div class="mb-1 d-flex align-items-center gap-2 justify-content-center justify-content-sm-start text-start">
               <div class="col-1 p-0 artist-img-box">
-                <img
-                  id="artistImg"
-                  src="https://i.scdn.co/image/ab6761610000e5ebf173136b94ae2f75f49f8b2b"
-                  class="rounded-circle"
-                  alt=""
-                />
+                <img id="artistImg"
+                     src="https://i.scdn.co/image/ab6761610000e5ebf173136b94ae2f75f49f8b2b"
+                     class="rounded-circle"
+                     alt="" />
               </div>
               <p id="albumInfo" class="p-0 text-ellipsis">
                 <span class="fw-bold">
@@ -74,14 +57,15 @@
         </div>
       </div>
     </section>
-
     <section class="album-tracks text-white p-4 tracks-box">
       <div class="container p-0">
         <div class="track-grid title-grid">
           <p class="text-white-50">#</p>
           <h6 class="fw-light text-white-50">Title</h6>
-          <h6 class="fw-light text-white-50">Plays</h6>
-          <h6 class="text-white-50"><i class="fa-regular fa-clock"></i></h6>
+          <h6 class="fw-light text-white-50">Lyrics</h6>
+          <h6 class="text-white-50">
+            <i class="fa-regular fa-clock"></i>
+          </h6>
         </div>
         <div id="tracksGrid" class="tracks-grid">
           <div class="track-grid">
@@ -102,14 +86,10 @@
         </div>
       </div>
     </section>
-
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-      crossorigin="anonymous"
-    ></script>
-
-    <script src="js/main.js"></script>
-    <script src="js/album.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+            crossorigin="anonymous"></script>
+    <!-- <script src="js/main.js"></script>
+    <script src="js/album.js"></script> -->
   </body>
 </html>
