returned search btn

--- a/index.html
+++ b/index.html
@@ -30,13 +30,16 @@
     <section class="py-5">
       <div class="container px-3 px-md-4">
         <form id="searchInpt" class="searchForm" action="">
-          <input name="searchKey" class="searchInpt" type="text" placeholder="Search" />
           <select class="filter-box" name="filter" id="">
             <option value="" selected>Track</option>
             <option value="artist">Artist</option>
             <option value="album">Album</option>
             <option value="genre">Genre</option>
           </select>
+          <input name="searchKey" class="searchInpt" type="text" placeholder="Search" />
+          <button class="submitBtn" type="submit">
+            <i class="fa-solid fa-magnifying-glass"></i>
+          </button>
         </form>
         <div id="infoGrid" class="info-grid py-5"></div>
       </div>
