--- a/index.html
+++ b/index.html
@@ -41,13 +41,18 @@
             <i class="fa-solid fa-magnifying-glass"></i>
           </button>
         </form>
-        <div id="infoGrid" class="info-grid py-5"></div>
+        <div class="search-box">
+          <div id="infoGrid" class="info-grid py-5"></div>
+          <div class="load-div">
+            <button id="loadBtn" class="load-btn load-hidden h4 p-3 rounded-5">More...</button>
+          </div>
+        </div>
       </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
             crossorigin="anonymous"></script>
-    <script src="js/main.js"></script>
-    <script src="js/index.js"></script>
-  </body>
+  <script src="js/main.js"></script>
+      <script src="js/index.js"></script>
+</body>
 </html>
