--- a/index.html
+++ b/index.html
@@ -3,20 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="spotify-32.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="spotify.ico" type="image/x-icon" />
     <title>Spotify</title>
     <!-- font awesome icons -->
-    <script src="https://kit.fontawesome.com/313b9add13.js"
-            crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/313b9add13.js"
+      crossorigin="anonymous"
+    ></script>
     <!-- Bootstrap styles -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-          rel="stylesheet"
-          integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
-          crossorigin="anonymous" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+      crossorigin="anonymous"
+    />
     <!-- custom styles -->
     <link rel="stylesheet" href="styles/main.css" />
     <link rel="stylesheet" href="styles/loader.css" />
     <link rel="stylesheet" href="styles/search.css" />
+    <link rel="stylesheet" href="styles/playlists.css" />
   </head>
   <body>
     <section id="loadAnimation" class="load-animation hide-animation">
@@ -31,12 +36,18 @@
       <div class="container px-3 px-md-4">
         <form id="searchInpt" class="searchForm" action="">
           <select class="filter-box" name="filter" id="">
-            <option value="" selected>Track</option>
+            <option value="track" selected>Track</option>
+            <option class="playlist-op" value="">Playlist</option>
             <option value="artist">Artist</option>
             <option value="album">Album</option>
             <option value="genre">Genre</option>
           </select>
-          <input name="searchKey" class="searchInpt" type="text" placeholder="Search" />
+          <input
+            name="searchKey"
+            class="searchInpt"
+            type="text"
+            placeholder="Search"
+          />
           <button class="submitBtn" type="submit">
             <i class="fa-solid fa-magnifying-glass"></i>
           </button>
@@ -44,15 +55,18 @@
         <div class="search-box">
           <div id="infoGrid" class="info-grid py-5"></div>
           <div class="load-div">
-            <button id="loadBtn" class="load-btn load-hidden h4 p-3 rounded-5">More...</button>
+            <button id="loadBtn" class="load-btn load-hidden h4 p-3 rounded-5">
+              More...
+            </button>
           </div>
         </div>
       </div>
     </section>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-            crossorigin="anonymous"></script>
-    <script src="js/main.js"></script>
-    <script src="js/index.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+      crossorigin="anonymous"
+    ></script>
+    <script type="module" src="js/index.js"></script>
   </body>
 </html>
