Corrected date column

--- a/playlist.html
+++ b/playlist.html
@@ -78,7 +78,7 @@
           <p class="text-white-50">#</p>
           <h6 class="fw-light text-white-50">Title</h6>
           <h6 class="fw-light text-white-50">Album</h6>
-          <h6 class="fw-light text-white-50">Added By</h6>
+          <h6 class="fw-light text-white-50">Date added</h6>
           <h6 class="text-white-50">
             <i class="fa-regular fa-clock"></i>
           </h6>
